# magnit-calc

./: Makefile  flake.nix  pyproject.toml
magnit_calc/: config.py  main.py  models.py  worker.py
tests/: test_main.py  test_worker.py
